# robot-project

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
retrofit-omnino/: CMakeCache.txt  Makefile  _build.sh  cmake_install.cmake  main.c
retrofit-omnino/include/: common.h  motor_control_driver.h
retrofit-omnino/src/: motor_control_driver.c
